# vex-v5-serial

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: aiv.rs  bluetooth.rs  ctrlradchan.rs  devices.rs  download_file.rs  product.rs  screen.rs  screencap.rs  set_team.rs  timed_run.rs  upload_program.rs
src/: array.rs  checks.rs  choice.rs  crc.rs  decode.rs  encode.rs  errors.rs  lib.rs  string.rs  timestamp.rs  v5.rs  varint.rs  version.rs
src/commands/: extended.rs  file.rs  kv.rs  mod.rs  remote.rs  screen.rs  simple.rs  system.rs
src/connection/: bluetooth.rs  device.rs  generic.rs  mod.rs  serial.rs
src/connection/bluetoothv5/: mod.rs
src/connection/genericv5/: mod.rs
src/devices/: asyncdevice.rs  device.rs  mod.rs
src/devices/bluetoothv5/: mod.rs
src/devices/genericv5/: mod.rs
src/packets/: capture.rs  cdc.rs  cdc2.rs  controller.rs  dash.rs  device.rs  factory.rs  file.rs  kv.rs  log.rs  match_mode.rs  mod.rs  program.rs  radio.rs  screen.rs  slot.rs  status.rs  system.rs
src/protocol/: extended.rs  file.rs  kv.rs  mod.rs  remote.rs  system.rs
