[workspace]
members = [
    "./packages/vex-v5-serial",
    "./packages/vex-cdc",
]
resolver = "3"

[workspace.dependencies]
vex-v5-serial = { version = "0.3.3", path = "packages/vex-v5-serial" }
vex-cdc = { version = "0.0.1", path = "packages/vex-cdc" }

# We do this so that tokio-serial uses the latest, fixed version of mio-serial
[patch.crates-io]
mio-serial = { git = "https://github.com/berkowski/mio-serial.git" }
